force-app/main/default/objects/Utilization_Metric__c/Utilization_Metric__c.object-meta.xml
<CustomObject>
    <description>The Utilization Metric object is used by the CSI team to track individual performance metrics.</description>
    <label>Utilization Metric</label>
    <nameField>
        <displayFormat>UM-{00000}</displayFormat>
        <label>Utilization Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Metrics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>