force-app/main/default/objects/Utilization_Metric__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Used as base to create one utilization record per user per day</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>