force-app/main/default/objects/Utilization_Metric__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Used to capture the event name with semicolon separated contributing to the utilization count. 
CRMIT 3/26 : Data Type is changed from Text to Text Area(Long)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>