force-app/main/default/objects/Utilization_Metric__c/fields/Exclude_from_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Metrics__c</fullName>
    <description>Satish 11/11/2019 - For use in reports</description>
    <formula>Owner:User.Exclude_from_Utilization_Metric__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude from Metrics</label>
    <type>Checkbox</type>
</CustomField>