force-app/main/default/objects/Utilization_Metric__c/fields/First_of_Month__c.field-meta.xml
<CustomField>
    <fullName>First_of_Month__c</fullName>
    <formula>Date(Year(Date__c),Month(Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First of Month</label>
    <type>Date</type>
</CustomField>