force-app/main/default/objects/Utilization_Metric__c/fields/Holidays__c.field-meta.xml
<CustomField>
    <fullName>Holidays__c</fullName>
    <description>Used to identify the current day is Holiday and yes populating with HOLIDAY in this field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Holiday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>