force-app/main/default/objects/Utilization_Metric__c/fields/Holidays_In_Month__c.field-meta.xml
<CustomField>
    <fullName>Holidays_In_Month__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Holidays In Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>