force-app/main/default/objects/Utilization_Metric__c/fields/Last_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_of_Month__c</fullName>
    <formula>Date(Year(Date__c),Month(Date__c), IF(Month(Date__c)=12, 31,DAY(DATE(YEAR( Date__c ),MONTH( Date__c )+1,1) - 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last of Month</label>
    <type>Date</type>
</CustomField>