force-app/main/default/objects/Utilization_Metric__c/fields/Manager_New__c.field-meta.xml
<CustomField>
    <fullName>Manager_New__c</fullName>
    <description>Created a new manager field text for history tracking of manager in case user reporting is changed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Historical Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>