force-app/main/default/objects/Utilization_Metric__c/fields/Pass_Fail__c.field-meta.xml
<CustomField>
    <fullName>Pass_Fail__c</fullName>
    <formula>IF( Utilization__c &gt;= 3, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pass/Fail?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>