force-app/main/default/objects/Utilization_Metric__c/fields/User_Working_Day__c.field-meta.xml
<CustomField>
    <fullName>User_Working_Day__c</fullName>
    <description>Batch will update the value 0 or 1 in case person works on particular day or not( excluding company holidays &amp; weekends)</description>
    <label>User Working Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>