force-app/main/default/objects/Utilization_Metric__c/fields/Utilization__c.field-meta.xml
<CustomField>
    <fullName>Utilization__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to track the event name contributing to the score and incrementing it with 1</description>
    <label>Utilization</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>