force-app/main/default/objects/Utilization_Metric__c/fields/Week_Day__c.field-meta.xml
<CustomField>
    <fullName>Week_Day__c</fullName>
    <formula>CASE(WEEKDAY(Date__c), 
     1, &quot;Sunday&quot;, 
     2, &quot;Monday&quot;,
     3, &quot;Tuesday&quot;,
     4, &quot;Wednesday&quot;,
     5, &quot;Thursday&quot;,
     6, &quot;Friday&quot;,
     &quot;Saturday&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Day</label>
    <type>Text</type>
</CustomField>