force-app/main/default/objects/Utilization_Metric__c/fields/Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Working_Days__c</fullName>
    <description>Satish 3/17/2019 - Working Days in a Month excluding Weekends and holidays</description>
    <label>Working Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>