force-app/main/default/objects/Utilization_Metric__c/fields/Working_Days_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Working_Days_Current_Month__c</fullName>
    <description>Satish 3/17/2019 - Only weekends are excluded. Holidays are not excluded.</description>
    <formula>(
( FLOOR ( ( DATE (
YEAR (DATE (YEAR(TODAY()),MONTH(TODAY()),28)+5),
MONTH(DATE (YEAR(TODAY()),MONTH(TODAY()),28)+5),
1 ) - 1 - DATE (1900,01,01) ) / 7 ) *5 )
+ MIN ( 5, MOD ( DATE (
YEAR (DATE (YEAR(TODAY()),MONTH(TODAY()),28)+5),
MONTH(DATE (YEAR(TODAY()),MONTH(TODAY()),28)+5),
1 ) - 1 - DATE (1900,01,01), 7 ) )
) -
(
( FLOOR ( ( DATE(YEAR(TODAY()),MONTH(TODAY()),1) - DATE (1900,01,01) ) / 7 ) *5 )
+ MIN ( 5, MOD ( DATE(YEAR(TODAY()),MONTH(TODAY()),1) - DATE (1900,01,01), 7 ) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Days Current Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>