force-app/main/default/objects/Utilization_Metric__c/fields/Working_Days_YTD__c.field-meta.xml
<CustomField>
    <fullName>Working_Days_YTD__c</fullName>
    <description>Working Days excluding Weekends and holidays. YTD Holiday count is manually managed via Custom Label - HolidayTracker. This formula calculates the nos of days b/w 2 days</description>
    <formula>(5 * ( FLOOR( ( Today() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Today() - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( YTD_Start_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( YTD_Start_Date__c - DATE( 1900, 1, 8), 7 ) ) ) + 1
- VALUE($Label.HolidayTracker)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Days YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>