force-app/main/default/objects/Utilization_Metric__c/fields/YTD_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>YTD_Start_Date__c</fullName>
    <description>Satish 4/1/2019 - Reference Date to calculate YTD Days. This field should be updated every year.</description>
    <formula>DATE(2019,04,01)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Start Date</label>
    <type>Date</type>
</CustomField>