force-app/main/default/objects/Utilization_Metric__c/listViews/All_Metrics.listView-meta.xml
<ListView>
    <fullName>All_Metrics</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Manager__c</columns>
    <columns>Date__c</columns>
    <columns>Utilization__c</columns>
    <columns>Pass_Fail__c</columns>
    <columns>User_Working_Day__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>notEqual</operation>
        <value>TOMORROW</value>
    </filters>
    <label>All Metrics</label>
</ListView>