force-app/main/default/objects/Utilization_Metric__c/listViews/All_Metrics_SBS_RT_View.listView-meta.xml
<ListView>
    <fullName>All_Metrics_SBS_RT_View</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Manager__c</columns>
    <columns>Date__c</columns>
    <columns>Utilization__c</columns>
    <columns>Pass_Fail__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>faye</value>
    </filters>
    <label>All Metrics (SBS RT View)</label>
    <sharedTo>
        <role>CSI_TECH_TEAM</role>
    </sharedTo>
</ListView>